--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
     <div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s">
         <div class="container py-5">
             <div class="section-title text-center position-relative pb-3 mb-5 mx-auto" style="max-width: 600px;">
-                <h5 class="fw-bold text-primary text-uppercase">Non-Woven Fabrics</h5>
+                <h5 class="fw-bold text-primary text-uppercase">Our Product</h5>
                 <p>Non-woven fabrics are a growing part of many industries due to their ability to be tailored for
                     specific uses, providing a balance of performance, sustainability, and cost-effectiveness.</p>
             </div>
