--- a/index.html
+++ b/index.html
@@ -208,11 +208,7 @@
                         <h1 class="mb-0">We Are Mallikarjuna Fabtech Private Limited</h1>
 
                     </div>
-                    <p class="mb-4">At Mallikarjuna Fabtech Private Limited, we are innovators in the field of non-woven
-                        fabric manufacturing, dedicated to providing high-quality, sustainable, and versatile fabric
-                        solutions to a wide range of industries. With a focus on excellence, we design and produce
-                        fabrics that meet the ever-evolving needs of industries such as healthcare, automotive,
-                        textiles, packaging, and more.</p>
+                    <p class="mb-4">Mallikarjuna Fabtech Pvt Ltd company has been established in 2020 company in ibrahimpatnam, Hyderabad, India.Is a manufacturer of high quality nonwoven polypropylene (PP) fabric rolls and nonwoven bags Suitable for a wide of applications. A team of highly qualified people who monitor the production and sales are equipped with state of the art 2.4 and 1.6 m width spun-bound nonwoven manufacturing facility with an annual capacity of 4000 metric tonnes who makes sure the maintenance of quality standards of the products and the processing of sales and the timely delivery of the products to the customers. We fetch raw materials from only highly reliable sources to maintain the fidelity of the nonwoven fabric rolls.</p>
                     <div class="row g-0 mb-3">
                         <h4>Product usage</h4>
                         <div class="col-sm-12 wow zoomIn" data-wow-delay="0.2s">
@@ -594,9 +590,7 @@
                             <div class="section-title section-title-sm position-relative pb-3 mb-4">
                                 <h3 class="text-light mb-0">About Us</h3>
                             </div>
-                            <p>At Mallikarjuna Fabtech Private Limited, we are pioneers in the production of
-                                high-quality non-woven fabrics. As a leading manufacturer and supplier, we specialize in
-                                offering innovative fabri...</p>
+                            <p>Mallikarjuna Fabtech Pvt Ltd company has been established in 2020 company in ibrahimpatnam, Hyderabad, India.Is a manufacturer of high quality nonwoven polypropylene (PP) fabric rolls and nonwoven bags Suitable for a wide of applications. A team of highly qualified people...</p>
                         </div>
                         <div class="col-lg-4 col-md-12 pt-5 mb-5">
                             <div class="section-title section-title-sm position-relative pb-3 mb-4">
